--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -531,7 +531,7 @@ To suffice the compact and portable requirement of the sensor node, sensor board
 \chapter{Experimental and Procedure}
 
 \section{Data Collection Method}
-To collect the data of falls and fall-liked activities for the development and optimization of the fall detection algorithm, experiments were performed on 5 young healthy subjects (male volunteers, age of 22 years old, weight from 60 to 90kg and height from 160 to 180 cm) to simulate the \gls{adl} and falls. These subjects are numbered from S1 to S5 with detail information provided below.
+To collect the data of falls and fall-liked activities for the development and optimization of the fall detection algorithm, experiments were performed on 5 young healthy subjects (male volunteers, age of 22 years old, weight from 55 to 90kg and height from 167 to 179 cm) to simulate the \gls{adl} and falls. These subjects are numbered from S1 to S5 with detail information provided below.
 \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{ |c|c|c|c|c| } 
@@ -549,7 +549,7 @@ To collect the data of falls and fall-liked activities for the development and o
 		\label{table:1}
 	\end{center}
 \end{table}\par
-All the subjects were asked to perform different movements such as standing, sitting-down/standing-up, walking, running, lying on the bed, going up/down the stair and different fall tests including forward, backward, right/left side way. The sensor node is attached to the center of chest, where was determined to be the optimal place for sensor placement. To ensure the safety of the volunteers, all the experiments were conducted on a 36-cm high cushion at the dormitory.
+All the subjects were asked to perform different movements such as standing, sitting-down/standing-up, walking, running, lying on the bed, going up/down the stair, jumping and different fall tests including forward, backward, right/left side way. The sensor node was attached to the center of chest, where was determined to be the optimal place for sensor placement. To ensure the safety of the volunteers, all the experiments were conducted on a 36-cm high cushion at the dormitory.
 \section{Data Analysis}
 Figure 5.1 is the visualized data of two typical fall events collected on volunteer S1 and S4. From the two datasets in the figure, it is clear that when a fall happen, the normalized acceleration first falls to a certain point below the normal acceleration to indicate the start of a fall. Within the next 0.5s, the normalized acceleration from two experiments both rise up to the upper peak at around 2.8 - 3.2 g and then return to the normal level. During the falls, the normalized angular velocity of both experiments also reach the peaks at around 264.9 - 396$^{o}/s$. This pattern can be met in most of other fall experiments with other volunteers (see appendix E) and agree with the pattern that was stated by the algorithm in section 3.2. It is a confirmation for the theory founded by Huynh \textit{et al.} \cite{main_quoc}.\\
 
@@ -623,9 +623,9 @@ Regarding the sitting-down, the pattern of this activity is the most similar to 
 From the difference between falls and those common \gls{adl} mentioned above, it is necessary to find out the optimal threshold values for the fall detection algorithm, to improve the accuracy of the system. The collected data of falls on five volunteers are represented in the table 5.2. This table demonstrates the comparison between the peak values resulted by different subjects when they performed fall simulations. This table helps me to determine three thresholds by using observation method.\par  
 First, it is important to find the optimal Lower Fall Threshold for the acceleration ($LFT_{Acc}$), because it is the first condition to start detecting a fall. Improper selection of the $LFT_{Acc}$ may lead to the miss of the fall event and cause failure of fall detection. From the given data in table, most of the lower peaks are below 0.35 g. To ensure the system can detect most of the falls, I decided to choose the Lower Fall Threshold for the acceleration at 0.35g.
 \par
-For the upper peaks of the acceleration in all kind of falls, the value is in the range of 2.31 - 3.46 g. This data helped me choose the Upper Fall Threshold for the acceleration ($UFT_{Acc}$) at about 2.75, to make sure the acceleration during 90\% of all falls will exceed the upper threshold and satisfy the second condition of the fall detection algorithm. 
+For the upper peaks of the acceleration in all kind of falls, the value is in the range of 2.31 - 3.46 g. This data helped me to choose the Upper Fall Threshold for the acceleration ($UFT_{Acc}$) at about 2.75, to make sure the acceleration during 90\% of all falls will exceed the upper threshold and satisfy the second condition of the fall detection algorithm. 
 \par 
-The final step is choosing the upper fall threshold for the angular velocity as a confirmatory threshold for the fall detection algorithm. From the data in table 5.2, it is suitable to choose the $UFT_{Gyro}$ at around 254$^{o}/s$. 
+The final step is choosing the upper fall threshold for the angular velocity as a confirmatory threshold for the fall detection algorithm. From the data in table 5.2, it is suitable to choose the $UFT_{Gyro}$ at around 254$^{o}/s$ to ensure all the falls will be detected. 
 \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{ |c|c|c|c|c| } 
@@ -670,9 +670,9 @@ The final step is choosing the upper fall threshold for the angular velocity as 
 \cleardoublepage
 
 \chapter{Results and Discussion}
-From the threshold values which were determined in previous chapter, a set of tests were established to evaluate the accuracy and robustness of the system. For the consistency, all the tests were performed on only one tester because of the replication in the gait and style of fall/non-fall activities. Volunteer S3 was chosen for these experiments. Due to the dangerous of the falls on human, I decided to limit the number of tests to 20 for both fall and non-fall activities. Volunteer S3 was asked to perform 10 true falls on the cushion and 10 \gls{adl}. All the test results were recorded.      
+From the threshold values which were determined in previous chapter, a set of tests were established to evaluate the accuracy and robustness of the system. For the consistency, all the tests were performed on only one tester because of the repetition in the gait and style of fall/non-fall activities. Volunteer S3 was chosen for these experiments. Due to the dangerous of the falls on human, I decided to limit the number of tests to 20 for both fall and non-fall activities. Volunteer S3 was asked to perform 10 true falls on the cushion and 10 \gls{adl}. All the test results were recorded.      
 \section{Results Assessment}
-The experimental results can be seen in the table 6.1. From the table, we can see that the device can correctly recognize 10/10 of non-fall activities and 6/10 of real falls. The accuracy of system is 70\% with 14/20 true detections. This results are expected and reasonable. 
+The experimental results can be seen in the table 6.1. From the table, we can see that the device can correctly recognize 8/10 of non-fall activities and 6/10 of real falls. The accuracy of system is 70\% with 14/20 true detections. This result is expected and reasonable. 
 \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{ |c|c|c|c|c| } 
@@ -685,18 +685,22 @@ The experimental results can be seen in the table 6.1. From the table, we can se
 		\caption{Experimental Results}
 		\label{table:1}
 	\end{center}
-with
-\begin{itemize}
+with\\
+\\
 	\textit{(i)True Positive}: fall occurs, device detects it\\
 	\textit{(ii)False Positive}: device detect falls, fall did not occur\\
 	\textit{(iii)True Negative}: normal movement, device does not declare a fall\\
 	\textit{(iv)False Negative}: fall occurs, device does not detect it	\\
-\end{itemize}
-\par
-For the non-falls activities, the failure in detection happened only when volunteer S3 performed the jumping with strong force on the ground. 
-
-
 \end{table}\par
+
+For the non-fall experiments, the failure in detection happened only when volunteer S3 performed the jumping with strong force on the ground (Figure 6.1). However, the important target user of this system is the elderly with the age of 65+ and jumping is just an assumed activity for the testing, not usually happened with this group of people. Therefore, it does not effect much on the accuracy of the system.
+\clearpage
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.5]{jump_strong}
+	\caption{Jumping with strong force on the ground}
+\end{figure}
+In contrast, for the real fall experiments, 
 
 \section{Comparing the performance with existing works}
 
