--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -670,7 +670,7 @@ The final step is choosing the upper fall threshold for the angular velocity as 
 \cleardoublepage
 
 \chapter{Results and Discussion}
-From the threshold values which were determined in previous chapter, a set of tests were established to evaluate the accuracy and robustness of the system. For the consistency, all the tests were performed on only one tester because of the repetition in the gait and style of fall/non-fall activities. Volunteer S3 was chosen for these experiments. Due to the dangerous of the falls on human, I decided to limit the number of tests to 20 for both fall and non-fall activities. Volunteer S3 was asked to perform 10 true falls on the cushion and 10 non-fall activities. All the test results were recorded.      
+From the threshold values which were determined in previous chapter, a set of tests was established to evaluate the accuracy and robustness of the system. For the consistency, all the tests were performed on only one tester because of the repetition in the gait and style of fall/non-fall activities. Volunteer S3 was chosen for these experiments. Due to the dangerous of the falls on human, I decided to limit the number of tests to 20 for both fall and non-fall activities. Volunteer S3 was asked to perform 10 true falls on the cushion and 10 non-fall activities. All the test results were recorded.      
 \section{Results Assessment}
 The experimental results can be seen in the table 6.1. From the table, we can see that the device can correctly recognize 8/10 of non-fall activities and 6/10 of real falls. The accuracy of system is 70\% with 14/20 true detections. This result is expected and reasonable. 
 \begin{table}[h]
@@ -721,11 +721,14 @@ In comparison between the system in this thesis with the first system, both of t
 Fall detection is one of the most important areas in the health-care system for the elderly. The objective of this thesis is to design and implement a wireless fall detection network prototype that can automatically detect the fall of user and send an emergency alert email to the caregivers. The system uses data from both accelerometer and gyroscope with the help of an optimized algorithm founded by Huynh \textit{et al.} \cite{main_quoc} to detect a fall. Looking at the testing results, the system can detect correctly up to 14/20 experiments (70\%) for both fall and non-fall activities. This result is acceptable for a bachelor thesis but not for a commercial device. Therefore, to realize this system, there must be further developments to optimize the accuracy and robustness of it.
 \section{Limitations}
 Despite the system working well, one such limitation of this thesis is that the thresholds finding and testing experiments were performed on young healthy subjects, for the safety reasons, on a thick cushion. The collected data of falls maybe different from a real fall for both acceleration and angular velocity. However, I expect that the real fall on user would experience higher peak accelerations and potentially higher angular velocity. Therefore, I believe that the thresholds founded in this thesis can be applied to a real-world device. \par 
-Another limitation of this thesis is that when detecting a fall, an email will be sent to the caregiver for informing them about the accident. However, an email is not suited for the instant assistance requirement because the caregiver may not check for a new mail continuously. Therefore, in the near future, there will be a SIM module implemented on the system to solve this problem. Whenever detecting a fall, beside sending an email, the micro-controller also sends an SMS message to a certain issued number with the help of a SIM module. Nowadays, most of the SIM modules on the market support UART protocol for the communication with the micro-controller. Hence, when adding the SIM module, it is not necessary to have many modifications but plug-and-play. 
+Another limitation of this thesis is that when detecting a fall, an email will be sent to the caregiver for informing them about the accident. However, an email is not suited for the instant assistance requirement because the caregiver may not check for a new mail continuously. Therefore, in the near future, there will be a SIM module implemented on the system to solve this problem. Whenever detecting a fall, beside sending an email, the micro-controller also sends an SMS message to a certain issued number with the help of a SIM module. Nowadays, most of the SIM modules on the market support UART protocol for the communication with the micro-controller. Hence, when adding the SIM module, it only needs to write a small function in the main program to send a pre-defined message to the caregiver. 
 \section{Future works}
 %======================================================================
-The system proposed in this thesis is using a simple threshold method to detect a fall. Even the result is acceptable 
-
+The system proposed in this thesis is using a simple threshold method to detect a fall. Even the result is acceptable, there are still some failures in the fall detection. The main reason for these failures is that all the thresholds are fix and not adaptive. When applied on a  real user, the difference on the gait or physical condition of user's body may cause some changes in acceleration and angular velocity during a fall. Therefore, in the near future, there should be some further studies on developing an algorithm using adaptive thresholds method to recognize the falls to improve the accuracy of the system. 
+\par
+Beside that, within this thesis, the sensor node is designed as a small device which is attached to the chest of user. When using it, users must wear it as a shirt button or a neck pendant that may cause some uncomfortable even not disturb much on their daily life. These users also need to recharge the device everyday if they want to use it. To solve this problem, in the near future, there should be an integration of the fall detection system onto a smartphone or a smartwatch device. With this method, the fall detection system can make use of the sensors inside smart devices without the need of another external sensor. Furthermore, this integration also helps solving the power problem. Users only need to charge their smart device as what they do everyday to use the fall detection system.
+\par 
+Finally, because of the limitations of a bachelor thesis, the data of falls were collected only on volunteers who are my friends with the similarity in age and body's condition. The collected data may not suitable for different users, especially the elderly who really need this system. Therefore, in further developments, I would try to carry out experiments to collect data on people with different physical conditions and range of age to improve the reliability of the system. 
 \appendix
 % Add a title page before the appendices and a line in the Table of Contents
 \addcontentsline{toc}{chapter}{APPENDICES}
